🎨 update document & format code